<!--
  ~ Copyright (c) 2016
  ~
  ~ This file, strings.xml, is apart of GeniPass.
  ~
  ~ GeniPass is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ GeniPass is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with GeniPass.  If not, see http://www.gnu.org/licenses/.
  -->

<resources>
    <string name="app_name">GeniPass</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="usr_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="genipass_welcome">Welcome to GeniPass, the password manager that generates your passwords on-the-fly without storing them.</string>
    <string name="manager">Manager</string>
    <string name="test">Strength Tester</string>

    <string name="entropy">Entropy:</string>
    <string name="password_hint">Below is your password, the spaces are provided for easy read. You can change if the spaces should be shown by default in the settings.</string>
    <string name="strength_frag_help">Enter a password below to test its strength as a password.</string>
    <string name="service_tag_header">Enter the service and tag below. \n\nService: name of service of the password you want. \nTag: Optional text for multiple passwords per service.\nLogin text (below): is shown so that you know you enter your password correctly.</string>
    <string name="service">Service</string>
    <string name="tag">Tag</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="open_source_license">Open Source License</string>
    <string name="debug">Debug</string>
    <string name="test_vector">Test Vectors</string>
    <string name="test_vector_crypto">Test vectors for crypto.</string>
    <string name="btn_test_vectors">btn_test_vectors</string>
    <string name="btn_open_license">btn_open_license</string>

    <string name="vec_username">9C1185A5C5E9FC54612808977EE8F548B2258D31</string>

    <string name="vec1_password">62AD42D40B7F1488EEDD17354D3969123B9B84A3</string>
    <string name="vec1_login_text">1DB7215136E5190A7B428BAE0C0274E4BB2EF23F1101B96059ECEB5C29A76786</string>
    <string name="vec1_master_private">161A425B46B34DD11E63C7F16A5B1BD44D604C2AD61237FE93F14BF1B37D2CC3900909EE32E4DD003D43CDCD805F4E41F20456A4BD9501814F5798A767EDF009</string>
    <string name="vec1_master_public">023E5C898158CA6A87C3334E28044EF6946AEFA05F9CE79D453497665700D3B235DA60AC1FF74AEDF9AA30DE64994508D8B0769A07D9DE18B75C1025E38083684D</string>
    <string name="vec1_first_child_private">75FAECDA96D8084AADA01891D7FEC0E6872EC3A2F56C745B590856337F90A92D3D332FC43EE8545D2271CAECB746283912FF88A1A74D26F4B3B87374049B725B</string>
    <string name="vec1_first_child_public">038F4E1BA44C0F066C8E72134D661F6C0B5AB98FD2FC953AF084979C2AF5C73D7D4D66CAF737D0FE8063D09E6320BFB3424C18043EF21799E36CB012C7A295FD93</string>
    <string name="vec1_second_child_private">35459DD3FCDC7D91A4AF47FE075CF3E8211D36430D2817FB935ECA1A0D6B923F3A45C7980AEAF2109F8F2AA1ED377F9C93B6D863980064A6B559267FC2D251A7</string>
    <string name="vec1_second_child_public">028676F28117B36EE62D6B4213B8CC35C68F87228BC21E45F73C5BB0D5E9FE8C65ACDE93AF47185CC83A270A4E320595FB7CA8338173DF5F5FD802E8767303F1D3</string>

    <string name="vec2_password">D1C6D372AD3BDAB0001E5200F77A67AC61E87733</string>
    <string name="vec2_login_text">9D77261B9281D803C3CC8E5EA8C18082572AF923C16F930B377352E50C6CCDC8</string>
    <string name="vec2_master_private">D26154E586CC1573DB8D45C39FAF6EE1BAAC0682B391F119ADA655BB3424F05A3B2AE478B03798BD7B431FCA2BEC5AB483E6F8A2707B5113B26C2F08FDAD49E1</string>
    <string name="vec2_master_public">03FBF569FD278B7C9A5178F2954081AC1128FF9C0E38ACCFDD376647E84B455E6389A746F81A4DDB62D72AADA8D3C1828732CB11F2468871B696CDC534A14B6CFE</string>
    <string name="vec2_first_child_private">1D14151500F036880B5E670ED0ADDA6B844E74643F9A03107A62D04F461F377C34EB6209C1EE638F1753838D02C91C6B55D6EDE2F34C3D6B3BCB62F89DDC8E11</string>
    <string name="vec2_first_child_public">029459AFB95F249071848BF9D9A6CBCC0CD474829FE9703335E67DCAA145A4FF9F0F38E9E79C3F6A004DD6B1DE25007A4F1369A9C4C6DEBB7EB64ADCB5FCD017B3</string>
    <string name="vec2_second_child_private">87681AC010C481A98F4BA11C5C8891B56D61D255329CF9D56361220277FA34EBFAE865082680C3F26075A78644A66B9BBB33306173D2B7000D0FA2A9ACE8DB5E</string>
    <string name="vec2_second_child_public">02241A9CDD7972F55F2B2087F0AE98AC26F68745B8215C746F3A61FF2D868C9ED8E9741FC956529972C8E8147047B13BC83A6E5C41E7C225581E243212C370BCC6</string>

    <string name="vec3_password">4CC2317A7711E2749840F241CC199DFD01F20FC0</string>
    <string name="vec3_login_text">F7FCC4FD8126ADFDE052FD5FB6FAD8EF73A77E1E59D918C8558CC2D06D5CF1F4</string>
    <string name="vec3_master_private">856B01418DA137AD11E62E8AB4413002D5700CA24A99FC187DFCB31935A393B4CB6AD766DF7B343F6DCC3C2C2C8B6F3494457B80ED9D6DE3469D0CE7A792D2E8</string>
    <string name="vec3_master_public">0321B2B57BA8A61D28B302051E5F2FAAD36A9913696EF907FA6AB08EB482CFC78466349185AAC199F7DBC020841702ECAA6488543338C0D3C22A61DB622BB88C9A</string>
    <string name="vec3_first_child_private">3AF7D524576CA9851B69F41D7A67B5E8F23EF9DEB4E47228C81C127EB519A4AA84586F232F2B366CAF6143C44950B893C455DEF9B9A9E502D4F6A1A433595BEA</string>
    <string name="vec3_first_child_public">03AD27F744275B41F7BB4585433654261FB16E89B19A79B4ECBF4F3424703D693A34ED16BE63B9F1B341167F8C7691A2BBA3B730CE3BD112495DB4B267359820CE</string>
    <string name="vec3_second_child_private">D5ECBE0300C0470F5D60E57AB132562D01652B22EBC6D16BA7EF53A6E66AF14D2132ED9CF00A4C7901A7E29D0C9F63E0B4969F9868F8190EF50F8E1357CF0FE7</string>
    <string name="vec3_second_child_public">02E3CDC8A98F8A7AA96CF97225719625054A28C05AB0F6EAD53C31E654D52A019BEBD88207F3D316139E472C4452488226BF112E14F20712B8522D91DAD8FAFE46</string>

    <string name="vec4_password">9286A8FB85F51AC9CA48B63DB753120361D271DA</string>
    <string name="vec4_login_text">0A45C07D44C5F9D4C9257063822F3D5702E68F9D301968FB90E43927A14197B5</string>
    <string name="vec4_master_private">2694AB6159892BA08FE00B9DEEE40500749109C1A700C86320986CEEAD5F21F718FDBCB73CAE23DBCB2BF813C902642DF86FF2B88615D11135D995D3C8814158</string>
    <string name="vec4_master_public">03FEE0776316EB04741405DCA6EA6C1D8A1C33BDAF44578DFF8D0FCEB0EDACB4E163A540DE545D54AD41B996301903A88F1B0C89C820CF484E28B03E3E58E6B5A9</string>
    <string name="vec4_first_child_private">31FB366637BD14F3533C1A8D2AE380FC8499444CE7A0C38C3EA126430AC5B3C799ABAF09E51AA7B891BF267FF65FF9FB828BF7651125E23D4FB2BD91A6DD91CA</string>
    <string name="vec4_first_child_public">03551EF9F371837EF8DAD63F22711BEDF7DB8F6712B8A31AAF69C3202F2ADDDD626568E7D3B1E1FA8B1E024B364C7F59BC57A7F937D80542109480C774292F06F3</string>
    <string name="vec4_second_child_private">1B635285810DC162214796F06D5F3295F064E9C652D843C3DA70E174F2D6DFC9F0403B4E9EC3637DD0A63FF57D1F6BC7D098B1DF7F87D27D2D3F5D0A07E1E5FA</string>
    <string name="vec4_second_child_public">02EBED89A73DAF74F71E9E53EF62A4F974F42873FC6FE5B33A8EB3F96D3CD9936814770081FC5B756493209B3448DFBB64A9FA8670CA4835306E1A42AD60640F01</string>

    <string name="vec5_password">1EA84C088D70C999F8760AC4B7192F0AD5B06EEB</string>
    <string name="vec5_login_text">5F062E398118F4A266FA065404E51F3186D2D5A9B4940268B40B83E28C9E54FC</string>
    <string name="vec5_master_private">2349041D0E66A0CDF9FBD290838040141B13D5EC3676A23E3EF95A9994771CFEC43256134BF78DDFDBB47C706DB01C8483B0EC536F6D7249DFD0F4E5B73987B8</string>
    <string name="vec5_master_public">02FD06F69218771D891319A1768ADA3547A27E1838F79001CD8B4BA7E377D57AB6F553FD2E7CBF22069BAC6E0B3146AE879670593B60BD04C001229E579E9EE65E</string>
    <string name="vec5_first_child_private">92EC2A37A008D96B4E6DC42F063E3B6F7D0E90B7681F1C86D33791841EB09B76BC7B69766450CA55558C0A9FEE28089D3D049D6F1930AF8C4168DEC2AE08D530</string>
    <string name="vec5_first_child_public">03E09FC8E717B8F465ABC831CEB592CFBFB8312396FB7BB6158FFA34EB9E91CB3E2F53029A646BD6E55F9CEEE4534274F302A50BA5E8D93216016F82D0B8961B3F</string>
    <string name="vec5_second_child_private">96771A742773BD6A6A8FA7AF5AD32F8BB43CB30E0D3A91117C422AF0035A00A58C7FC811397085A0FC19B820CC96CE46FBCF5E0DA8D95A108BFD1919521CA3AA</string>
    <string name="vec5_second_child_public">03045AD1EB18AE1A625DED5EB2E990DAC9DCCBC17B1C4D2BFA94A4AED7E2E0282C8FD175DA772328F63DC2C943B9241988FC592373F225C1FEC346483D947D6FE0</string>

    <string name="password_visibility">Password Visibility</string>
    <string name="gpl_link">https://www.gnu.org/licenses/gpl.txt</string>
    <string name="open_source_license_summary">Opens the GNU General Public License V3 in a browser.</string>
    <string name="privacy_policy">We don\'t store your data, period. \n\nWe physically can\'t: we have no server and GeniPass isn\'t allowed to use the internet (lacking permissions). Further more we don\'t even store your passwords on your device so there\'s no data to worry about.</string>
    <string name="btn_privacy">btn_privacy_policy</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="tldr_privacy_policy">tl;dr: We don\'t store anything anywhere.</string>
    <string name="tweak">Tweak</string>
    <string name="time_out">Time Out</string>
    <string name="time_out_summary">Set the length of time before app logs you out (default 15 minutes.)</string>
    <string name="fifteen">15</string>
    <string name="lp_timeout">lp_timeout</string>

    <string-array name="time_out_entries">
        <item>Never</item>
        <item>15 Min</item>
        <item>30 Min</item>
        <item>45 Min</item>
        <item>1 Hour</item>
    </string-array>

    <string-array name="time_out_values">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <string name="about_txt">About</string>
    <string name="about_summary">Info about the app and developer.</string>
    <string name="btn_about">btn_about</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="about_detail">GeniPass is made by James Carroll. \nIcon made by Loreanne Varon.</string>
    <string name="toggle_spaces">Show Spaces</string>
    <string name="toggle_space_sum">Set whether spaces should be shown in your password by default.</string>
    <string name="sp_toggle_spaces">sp_toggle_spaces</string>
</resources>
