<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016
  ~
  ~ This file, pref_debug.xml, is apart of GeniPass.
  ~
  ~ GeniPass is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ GeniPass is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with GeniPass.  If not, see http://www.gnu.org/licenses/.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/about">
        <Preference
            android:title="@string/open_source_license"
            android:summary="@string/open_source_license_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/gpl_link" />
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/debug">
        <PreferenceScreen
            android:key="@string/btn_test_vectors"
            android:title="@string/test_vector"
            android:summary="@string/test_vector_crypto"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>